pridetas namus darbas CSS1

--- a/Namu darbai/CSS1/index.html
+++ b/Namu darbai/CSS1/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
     <link rel="stylesheet" href="stilius.css">
   </head>
   <body>
     <h1>Iš sodo į lėkšę</h1>
-      <p><em>Potager</em> yra prancūziškas terminas dekoratyvinėms daržovėmis. Dažnai gėlės (valgomosios ir nevalgomios) ir žolynai yra pasodinamos su daržovėmis, kad pagerintų sodo grožį. Tikslas yra suteikti maistui estetinį malonumą.</p>
+      <p><span id="pirmas">Potageryra</span> prancūziškas terminas dekoratyvinėms daržovėmis. Dažnai gėlės (valgomosios ir nevalgomios) ir žolynai yra pasodinamos su daržovėmis, kad pagerintų sodo grožį. Tikslas yra suteikti maistui estetinį malonumą.</p>
 
     <h2>Ką sodinti</h2>
-      <p style='color:grey'>Sodinukus renkamasi ne tik pagal išvaizda bet ir pagal praktiškumą. Paprastai tai augalai nereikalaujantys didelės priežiūros.</p>
+      <p class="sodinti">Sodinukus renkamasi ne tik pagal išvaizda bet ir pagal praktiškumą. Paprastai tai augalai nereikalaujantys didelės priežiūros.</p>
   </body>
 </html>
