Pridetas namu darbas HTML14

--- a/Namu darbai/HTML14/index.html
+++ b/Namu darbai/HTML14/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>2017 Rupjūtis</h1>
+    <h1>2017 Rugpjūtis</h1>
 
       <div class="">
       <span>Pr&emsp;&emsp;07 14 21 28</span>
