--- a/Namu darbai/HTML6/index.html
+++ b/Namu darbai/HTML6/index.html
@@ -8,49 +8,39 @@
 
       <table>
         <tr>
-          <td><input type="text" name="" value="777"></td>
+          <td colspan="3">
+            <input type="text" name="" value="777">
+          </td>
         </tr>
-      </table>
-
-      <table>
+     
         <tr>
-          <td><input type="submit" name="" value="7"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="8"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="9"></td>
+          <td><input type="button" name="" value="7"></td>
+          <td><input type="button" name="" value="8"></td>
+          <td><input type="button" name="" value="9"></td>
         </tr>
 
         <tr>
-          <td><input type="submit" name="" value="4"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="5"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="6"></td>
+          <td><input type="button" name="" value="4"></td>
+          <td><input type="button" name="" value="5"></td>
+          <td><input type="button" name="" value="6"></td>
         </tr>
 
         <tr>
-          <td><input type="submit" name="" value="1"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="2"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="3"></td>
+          <td><input type="button" name="" value="1"></td>
+          <td><input type="button" name="" value="2"></td>
+          <td><input type="button" name="" value="3"></td>
         </tr>
 
         <tr>
-          <td><input type="submit" name="" value="+"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="-"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="/"></td>
+          <td><input type="button" name="" value="+"></td>
+          <td><input type="button" name="" value="-"></td>
+          <td><input type="button" name="" value="/"></td>
         </tr>
 
         <tr>
-          <td><input type="submit" name="" value="*"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="C"></td>
-          <td>&emsp;</td>
-          <td><input type="submit" name="" value="CE"></td>
+          <td><input type="button" name="" value="*"></td>
+          <td><input type="button" name="" value="C"></td>
+          <td><input type="button" name="" value="CE"></td>
         </tr>
 
     </table>
