--- a/Namu darbai/CSS4/index.html
+++ b/Namu darbai/CSS4/index.html
@@ -3,27 +3,71 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+
+      .borders {
+        border-style: double;
+      }
+      .main {
+        width: 500px;
+        margin: auto;
+        font-family: courier;
+      }
+
+      ul {
+        display: flex;
+        border-top: 2px solid black;
+        border-bottom: 1px solid black;
+        padding: 10px 0px 10px 0px;
+        justify-content: center;
+      }
+
+      ul li {
+        display: inline-block;
+        padding: 0px 12px 0px 12px;
+      }
+
+      ul li a {
+        text-decoration: none;
+        color: black;
+      }
+
+      ul li a:hover {
+        color: red;
+      }
+      img {
+        display: flex ;
+        width: 100%;
+        margin: auto;
+        margin-top: 30px;
+        justify-content: center;
+      }
+
+      .logo {
+        width: 30%;
+      }
+
+      p {
+        text-align: center;
+        margin-bottom: 30px;
+      }
+
+    </style>
   </head>
   <body>
-    <style media="screen">
-      .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      </style>
-
-      
-    <figure>
-      <img src="images/logo.gif" alt="logotipas" class="center">
-    </figure>
-    <hr>
-    <br>
-    <hr>
-
-
-    <figure>
-      <img src="images/keys.jpg" alt="" class="center">
-    </figure>
+    <div class="borders">
+        <div class="main">
+          <img class="logo" src="images/logo.gif" alt="">
+            <ul>
+              <li><a href="#">PAGRINDINIS</a></li>
+              <li><a href="#">PARDAVIMAS</a></li>
+              <li><a href="#">REMONTAS</a></li>
+              <li><a href="#">APIE</a></li>
+              <li><a href="#">KONTAKTAI</a></li>
+            </ul>
+            <img src="images/keys.jpg" alt="">
+            <p>Mes specializuojamės klasikinių klaviatūrų, ypač "Fender Rhodes", Wurlitzer EP200 ir Hohner Clavinet, pardavimu ir taisymu.</p>
+      </div>
+    </div>
   </body>
 </html>
