'pataisytas namu darbas js2'

--- a/Namu darbai/js2/index.html
+++ b/Namu darbai/js2/index.html
@@ -9,11 +9,17 @@
 
     var x = 10;
     var y = 2;
+    // var rezultatas = (10/2);
+    spausdintiDviejuSkaiciuDalyba(x, y);
+    // var rezultatas = (10/2);
+    // document.write(rezultatas);
+    // alert(rezultatas);
+    // console.log(rezultatas);
+    function spausdintiDviejuSkaiciuDalyba(x, y) {
+      console.log(x / y);
+      alert(x / y);
+    }
 
-    var rezultatas = (10/2);
-    document.write(rezultatas);
-    alert(rezultatas);
-    console.log(rezultatas);
 
     </script>
   </body>
