pataisytas namus darbas js3

--- a/Namu darbai/js3/index.html
+++ b/Namu darbai/js3/index.html
@@ -7,12 +7,19 @@
   <body>
     <script type="text/javascript">
 
-     var skaicius1 = 10;
-     var skaicius2 = 5;
-     var dalyba = skaicius1 / skaicius2;
-     console.log(skaicius1 + " : " + skaicius2 + " = " + dalyba);
-     alert(skaicius1 + " : " + skaicius2 + " = " + dalyba);
-   
+     // var skaicius1 = 10;
+     // var skaicius2 = 5;
+     // var dalyba = skaicius1 / skaicius2;
+
+     spausdintiDviejuSkaiciuDalyba(10,5,2);
+
+     function spausdintiDviejuSkaiciuDalyba(a, b, c){
+     // console.log(skaicius1 + " : " + skaicius2 + " = " + dalyba);
+        alert(a + " : " + b + " = " + c);
+   }
+
+
+
     </script>
   </body>
 </html>
