--- a/Namu darbai/js2/index.html
+++ b/Namu darbai/js2/index.html
@@ -18,6 +18,7 @@
     function spausdintiDviejuSkaiciuDalyba(x, y) {
       console.log(x / y);
       alert(x / y);
+      return x / y;
     }
 
 
