--- a/Namu darbai/js2/index.html
+++ b/Namu darbai/js2/index.html
@@ -9,6 +9,9 @@
 
     var x = 10;
     var y = 2;
+    var z = x / y;
+    console.log(spausdintiDviejuSkaiciuDalyba(x, y));
+    alert(spausdintiDviejuSkaiciuDalyba(x, y));
     // var rezultatas = (10/2);
     spausdintiDviejuSkaiciuDalyba(x, y);
     // var rezultatas = (10/2);
@@ -16,9 +19,7 @@
     // alert(rezultatas);
     // console.log(rezultatas);
     function spausdintiDviejuSkaiciuDalyba(x, y) {
-      console.log(x / y);
-      alert(x / y);
-      return x / y;
+      return z
     }
 
 
