--- a/Namu darbai/js2/index.html
+++ b/Namu darbai/js2/index.html
@@ -7,18 +7,21 @@
   <body>
     <script type="text/javascript">
 
-    var x = 10;
-    var y = 2;
-    // var rezultatas = (10/2);
-    spausdintiDviejuSkaiciuDalyba(x, y);
-    // var rezultatas = (10/2);
-    // document.write(rezultatas);
-    // alert(rezultatas);
-    // console.log(rezultatas);
+    // var x = 10;
+    // var y = 2;
+    // var z = x / y;
+
     function spausdintiDviejuSkaiciuDalyba(x, y) {
-      console.log(x / y);
-      alert(x / y);
+      return z
     }
+
+    function spausdintiDviejuSkaiciuDalyba(x, y) {
+      return x / y;
+    }
+    var z = spausdintiDviejuSkaiciuDalyba(10,2);
+
+    console.log(z);
+    alert(z);
 
 
     </script>
