--- a/Namu darbai/js4/index.html
+++ b/Namu darbai/js4/index.html
@@ -7,6 +7,10 @@
   <body>
 
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript">
+      var age = prompt("Įveskite amžių", "");
+        tikrinuAmziu(age);
 
+    </script>
   </body>
 </html>
