--- a/Namu darbai/js6/index.html
+++ b/Namu darbai/js6/index.html
@@ -6,9 +6,14 @@
   </head>
   <body>
     <script type="text/javascript">
+    var name = "Julija";
+    manoVardas(name);
+
+    function manoVardas(name) {
       for (var i = 1; i < 6; i++) {
-        document.write("<ul>Julija</ul>");
-      }
+      document.write(name + "<br>");
+    }
+    
   </script>
   </body>
 </html>
