--- a/Namu darbai/js1/index.html
+++ b/Namu darbai/js1/index.html
@@ -7,11 +7,11 @@
   <body>
     <script type="text/javascript">
 
-      PirmasSkaicius = 10;
+      var pirmasSkaicius = 10;
 
-      AntrasSkaicius = 10;
+      var antrasSkaicius = 10;
 
-      SkaiciuSuma = PirmasSkaicius + AntrasSkaicius;
+      skaiciuSuma = (pirmasSkaicius + antrasSkaicius);
 
       console.log(SkaiciuSuma);
 
