--- a/Namu darbai/js1/index.html
+++ b/Namu darbai/js1/index.html
@@ -11,7 +11,7 @@
 
       var antrasSkaicius = 10;
 
-      skaiciuSuma = (pirmasSkaicius + antrasSkaicius);
+      var skaiciuSuma = (pirmasSkaicius + antrasSkaicius);
 
       console.log(SkaiciuSuma);
 
