--- a/projektas/Apie.html
+++ b/projektas/Apie.html
@@ -62,10 +62,11 @@
 
       .pavadinimas {
             text-align: center;
-
-
         }
-
+        
+        a {
+          color:black;
+        }
 
       .footer{
           background-color:#333331 ;
@@ -105,9 +106,9 @@
                              <!-- VIRSUS LOGO-->
      <header class="virsus">
        <div class="logo">
-         <img class="logo"src="images/lmta.png" alt="">
-           <div class="biblioteka">
-             <h3>BIBLIOTEKA</h3>
+         <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
+          <div class="biblioteka">
+             <a href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
              <div class="fb">
                <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
              </div>
@@ -142,41 +143,41 @@
 
 
                <!--DESTYMAS-->
-              <div class="row">
+        <div class="row">
 
-              <div class="col s12 m12 l12">
-                <div class="box-center">
-                  <h5 class="pavadinimas">APIE BIBLIOTEKĄ</h5>
-                  <p>Bibliotekos misija – visapusiškai tenkinti akademijos bendruomenės informacinius mokslo ir studijų poreikius.</p>
-                  <p>Bibliotekos vizija – tapti informacijos ir kultūros traukos centru.</p>
-                  <p class="bold">Bibliotekos tikslai:</p>
+          <div class="col s12 m12 l12">
+            <div class="box-center">
+              <h5 class="pavadinimas">APIE BIBLIOTEKĄ</h5>
+              <p>Bibliotekos misija – visapusiškai tenkinti akademijos bendruomenės informacinius mokslo ir studijų poreikius.</p>
+              <p>Bibliotekos vizija – tapti informacijos ir kultūros traukos centru.</p>
+              <p class="bold">Bibliotekos tikslai:</p>
 
-                  <p>-Užtikrinti akademijos prioritetinių mokslo ir studijų krypčių informacinį aprūpinimą;</p>
-                  <p>-Padaryti prieinamus vidinius ir išorinius informacijos resursus LMTA bendruomenei;</p>
-                  <p>-Tapti aktyvia studijų proceso dalyve.</p>
+              <p>-Užtikrinti akademijos prioritetinių mokslo ir studijų krypčių informacinį aprūpinimą;</p>
+              <p>-Padaryti prieinamus vidinius ir išorinius informacijos resursus LMTA bendruomenei;</p>
+              <p>-Tapti aktyvia studijų proceso dalyve.</p>
 
 
-                  <h5 class="pavadinimas">BIBLIOTEKA SKAIČIAIS</h5>
-                  <p>– Bibliotekos informacijos išteklių fondas kaupiamas pagal Lietuvos muzikos ir teatro akademijos studijų ir mokslo kryptis, atsižvelgiant į akademinės bendruomenės poreikius, tyrėjų, dėstytojų, doktorantų pageidavimus ir katedrų rekomendacijas, studijų programų kaitą. Bibliotekoje kaupiami specializuoti menotyros ir meno ištekliai, dėstytojų, tyrėjų ir studentų darbai. Iš viso bibliotekos fonde sukaupta daugiau nei 233 tūkst. tradicinių dokumentų iš kurių apie 118 tūkst. sudaro natų fondas, apie 31 tūkst. garso ir vaizdo įrašų fondas. Tai sudaro virš 2 300 metrų lentynų. Kasmet fondas papildomas apie 1 500 vnt. dokumentų.</p>
-                  <p>– Visi bibliotekos procesai (komplektavimas, katalogavimas, vartotojų aptarnavimas, informacijos paieška, statistika) automatizuoti. Nuo 2000 metų veikia integrali bibliotekos informacijos sistema ALEPH 500. Bibliotekos elektroniniame kataloge atsispindi bibliotekos įsigyti ir saugomi/prieinami dokumentai. Vartotojai per savo paskyrą gali valdyti leidinių užsakymus, leidinių grąžinimo terminus, gauti informaciją apie susikaupusius delspinigius.</p>
-                  <span id="text">– Akademijos bendruomenė turi prieigą prie 19 mokslinės informacijos licencijuojamų duomenų bazių, kuriose gali skaityti daugiau nei 15 tūkst. pavadinimų periodinių leidinių (el. žurnalų, el. konferencijų medžiagų ir kt. el. dokumentų), klausyti virš 2 mln. garso įrašų.</p>
-                  <p>– Nuo 2014 metų Akademijos mokslinių publikacijų duomenų bazėje (PDB) kaupiamos akademijos darbuotojų mokslo ir meninių tyrimų publikacijos, užtikrinama jų paieška, prieiga prie jų.</p>
-                  <p>– Nuo 2018 metų Akademijos magistrantūros baigiamųjų darbų, daktaro disertacijų ir jų santraukų elektroninių dokumentų (ETD) informacijos sistemoje kaupiami magistrantūros darbų, daktaro disertacijų ir jų santraukų aprašai, užtikrinama jų paieška ir prieiga prie jų.</p>
-                  <p>– Virtuali biblioteka (LMTA PRIMO) yra integrali paieškos sistema (pagrįsta vieno langelio principu), leidžianti vienu metu ieškoti informacijos LMTA bibliotekos kataloge, duomenų bazėse, atviros prieigos talpyklose ir archyvuose.</p>
+              <h5 class="pavadinimas">BIBLIOTEKA SKAIČIAIS</h5>
+              <p>– Bibliotekos informacijos išteklių fondas kaupiamas pagal Lietuvos muzikos ir teatro akademijos studijų ir mokslo kryptis, atsižvelgiant į akademinės bendruomenės poreikius, tyrėjų, dėstytojų, doktorantų pageidavimus ir katedrų rekomendacijas, studijų programų kaitą. Bibliotekoje kaupiami specializuoti menotyros ir meno ištekliai, dėstytojų, tyrėjų ir studentų darbai. Iš viso bibliotekos fonde sukaupta daugiau nei 233 tūkst. tradicinių dokumentų iš kurių apie 118 tūkst. sudaro natų fondas, apie 31 tūkst. garso ir vaizdo įrašų fondas. Tai sudaro virš 2 300 metrų lentynų. Kasmet fondas papildomas apie 1 500 vnt. dokumentų.</p>
+              <p>– Visi bibliotekos procesai (komplektavimas, katalogavimas, vartotojų aptarnavimas, informacijos paieška, statistika) automatizuoti. Nuo 2000 metų veikia integrali bibliotekos informacijos sistema ALEPH 500. Bibliotekos elektroniniame kataloge atsispindi bibliotekos įsigyti ir saugomi/prieinami dokumentai. Vartotojai per savo paskyrą gali valdyti leidinių užsakymus, leidinių grąžinimo terminus, gauti informaciją apie susikaupusius delspinigius.</p>
+              <span id="text">– Akademijos bendruomenė turi prieigą prie 19 mokslinės informacijos licencijuojamų duomenų bazių, kuriose gali skaityti daugiau nei 15 tūkst. pavadinimų periodinių leidinių (el. žurnalų, el. konferencijų medžiagų ir kt. el. dokumentų), klausyti virš 2 mln. garso įrašų.</p>
+              <p>– Nuo 2014 metų Akademijos mokslinių publikacijų duomenų bazėje (PDB) kaupiamos akademijos darbuotojų mokslo ir meninių tyrimų publikacijos, užtikrinama jų paieška, prieiga prie jų.</p>
+              <p>– Nuo 2018 metų Akademijos magistrantūros baigiamųjų darbų, daktaro disertacijų ir jų santraukų elektroninių dokumentų (ETD) informacijos sistemoje kaupiami magistrantūros darbų, daktaro disertacijų ir jų santraukų aprašai, užtikrinama jų paieška ir prieiga prie jų.</p>
+              <p>– Virtuali biblioteka (LMTA PRIMO) yra integrali paieškos sistema (pagrįsta vieno langelio principu), leidžianti vienu metu ieškoti informacijos LMTA bibliotekos kataloge, duomenų bazėse, atviros prieigos talpyklose ir archyvuose.</p>
 
-                  <p>– LMTA bibliotekos plotas – apie 1292 kv. m.</p>
-                  <p>– Bibliotekos paslaugomis naudojasi daugiau nei 1700 vartotojų. Jie aptarnaujami 3 bibliotekos padaliniuose su įrengtomis 36 darbo vietomis, 25 kompiuterizuotomis darbo vietomis.</p>
-                  <p>– Per metus bibliotekoje apsilanko apie 20 tūkst. vartotojų, vidutiniškai išduodama virš 90 tūkst. leidinių.</p>
-                  <p>– Nuo 2018 m. liepos 1d. prie LMTA prijungtas Klaipėdos menų fakultetas.</p>
-                  <p>– Biblioteka nuolatos rengia mokymus, konsultacijas, parodas.</p>
-                  <p>– Biblioteka dalyvauja projektuose, programose, įvairių organizacijų veikloje.</p></span>
+              <p>– LMTA bibliotekos plotas – apie 1292 kv. m.</p>
+              <p>– Bibliotekos paslaugomis naudojasi daugiau nei 1700 vartotojų. Jie aptarnaujami 3 bibliotekos padaliniuose su įrengtomis 36 darbo vietomis, 25 kompiuterizuotomis darbo vietomis.</p>
+              <p>– Per metus bibliotekoje apsilanko apie 20 tūkst. vartotojų, vidutiniškai išduodama virš 90 tūkst. leidinių.</p>
+              <p>– Nuo 2018 m. liepos 1d. prie LMTA prijungtas Klaipėdos menų fakultetas.</p>
+              <p>– Biblioteka nuolatos rengia mokymus, konsultacijas, parodas.</p>
+              <p>– Biblioteka dalyvauja projektuose, programose, įvairių organizacijų veikloje.</p></span>
 
-              <div class="btn-container">
-                <button id="toggle">Skaityti daugiau</button>
-              </div>
-            </div>
+          <div class="btn-container">
+            <button id="toggle">Skaityti daugiau</button>
           </div>
         </div>
+      </div>
+    </div>
 
 
      <div class="footer">
