--- a/projektas/index.html
+++ b/projektas/index.html
@@ -38,6 +38,10 @@
           display: flex;
           margin-left: 50px;
           margin-top: -5px;
+
+      }
+      a {
+        color:black;
       }
 
       .fb{
@@ -57,7 +61,7 @@
 
       }
 
-        .box-center {
+      .box-center {
           background: #eeeeee ;
           display: block;
           margin-left: auto;
@@ -69,7 +73,7 @@
 
 
 
-        .btn {
+      .btn {
           width: 200px;
           height: 50px;
           padding: 8px;
@@ -144,7 +148,7 @@
 
         .katalogai li{
           display: block;
-          margin: 5px
+          margin: 5px;
         }
     </style>
 
@@ -160,7 +164,7 @@
         <div class="logo">
           <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
             <div class="biblioteka">
-              <h3>BIBLIOTEKA</h3>
+              <a href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
               <div class="fb">
                 <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
               </div>
