--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -63,6 +63,9 @@
         margin-top:30px;
       }
 
+      a{
+        color:black;
+      }
 
       .footer{
           background-color:#333331 ;
@@ -72,16 +75,16 @@
         }
 
 
-    .btn{
-      width: 200px;
-      height: 50px;
-      padding: 8px;
-      background-color: #a63b32 !Important;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top:30px;
-    }
+        .btn{
+          width: 200px;
+          height: 50px;
+          padding: 8px;
+          background-color: #a63b32 !Important;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top:30px;
+        }
 
 
     </style>
@@ -96,9 +99,9 @@
                            <!-- VIRSUS LOGO-->
      <header class="virsus">
        <div class="logo">
-         <img class="logo"src="images/lmta.png" alt="">
-           <div class="biblioteka">
-             <h3>BIBLIOTEKA</h3>
+         <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
+            <div class="biblioteka">
+             <a href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
              <div class="fb">
                <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
              </div>
@@ -185,26 +188,26 @@
              </div>
            </div>
 
-       <div class="footer">
-         <div class="row">
-           <div class="col s12 m12 l12">
-             <div class="footer">
+           <div class="footer">
+             <div class="row">
+               <div class="col s12 m12 l12">
+                 <div class="footer">
 
-                 <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
-                 <p>Muzikos fakulteto skaitykla:
-                 Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
-                 <p>Muzikos fakulteto biblioteka:
-                 Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
-                 <p>Teatro ir kino fakulteto biblioteka
-                 T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
-                 <p>El. paštas: biblioteka@lmta.lt</p>
+                     <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
+                     <p>Muzikos fakulteto skaitykla:
+                     Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
+                     <p>Muzikos fakulteto biblioteka:
+                     Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
+                     <p>Teatro ir kino fakulteto biblioteka
+                     T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
+                     <p>El. paštas: biblioteka@lmta.lt</p>
+                  </div>
               </div>
-          </div>
-        </div>
+            </div>
 
-    <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script type="text/javascript">
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript">
 
-    </script>
-  </body>
-</html>
+        </script>
+      </body>
+    </html>
