--- a/projektas/paslaugos.html
+++ b/projektas/paslaugos.html
@@ -89,6 +89,10 @@
               color: #a63b32 ;
             }
 
+            .bibl{
+              color:black;
+            }
+
     </style>
 
      <!--Let browser know website is optimized for mobile-->
@@ -101,9 +105,9 @@
                              <!-- VIRSUS LOGO-->
      <header class="virsus">
        <div class="logo">
-         <img class="logo"src="images/lmta.png" alt="">
-           <div class="biblioteka">
-             <h3>BIBLIOTEKA</h3>
+        <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
+          <div class="biblioteka">
+             <a class="bibl"href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
              <div class="fb">
                <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
              </div>
