--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -31,12 +31,11 @@
           height: 70px;
         }
 
-      .fb{
+      /* .fb{
           width: 40px;
           margin-left: 400px;
           margin-top:20px;
-
-        }
+        } */
 
       .biblioteka {
           margin-left: 50px;
@@ -54,18 +53,15 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 50%;
+          width: 60%;
           margin-top:20px;
       }
 
       .pavadinimas {
-        text-align: center;
-        margin-top:30px;
-      }
+          text-align: center;
+          margin-top:30px;
+        }
 
-      a{
-        color:black;
-      }
 
       .footer{
           background-color:#333331 ;
@@ -75,7 +71,7 @@
         }
 
 
-        .btn{
+      .btn{
           width: 200px;
           height: 50px;
           padding: 8px;
@@ -84,8 +80,29 @@
           margin-left: auto;
           margin-right: auto;
           margin-top:30px;
+      }
+
+        .info1{
+            width:200px;
         }
 
+        .sticky{
+            position: fixed;
+            width: 100%;
+            left: 0;
+            top: 0;
+            z-index: 100;
+            border-top: 0;
+          }
+
+        a {
+          color:#a63b32;
+        }
+
+        .juoda{
+            color:black;
+        }
+        
 
     </style>
 
@@ -99,12 +116,12 @@
                            <!-- VIRSUS LOGO-->
      <header class="virsus">
        <div class="logo">
-         <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
-            <div class="biblioteka">
-             <a href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
-             <div class="fb">
+         <img class="logo"src="images/lmta.png" alt="">
+           <div class="biblioteka">
+               <a class="juoda" href="index.html"><h3>BIBLIOTEKA</h3></a>
+             <!-- <div class="fb">
                <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
-             </div>
+             </div> -->
            </div>
          </div>
        </header>
@@ -119,6 +136,7 @@
                   <li><a href="index.html">PAGRINDINIS</a></li>
                   <li><a href="paslaugos.html">PASLAUGOS</a></li>
                   <li><a href="apie.html">APIE BIBLIOTEKĄ</a></li>
+                  <li><a href="pasiulyk.html">PASIŪLYK LEIDINĮ</a></li>
                </ul>
             </div>
           </div>
@@ -128,9 +146,13 @@
           <li><a href="index.html">PAGRINDINIS</a></li>
           <li><a href="paslaugos.html">PASLAUGOS</a></li>
           <li><a href="apie.html">APIE BIBLIOTEKĄ</a></li>
+          <li><a href="pasiulyk.html">PASIŪLYK LEIDINĮ</a></li>
        </ul>
                           <!--FORMA  -->
        <h5 class="pavadinimas">LEIDINIŲ UŽSAKYMO FORMA</h5>
+       <div class="box-center">
+         LMTA bendruomenės nariai gali pasiūlyti bibliotekai įsigyti mokslui ir studijoms reikalingus leidinius. Prieš pildydami užsakymo formą, LMTA bibliotekos  <a href="https://aleph.library.lt/F?func=find-b-0&local_base=lmt01opac" target="_blank">el. kataloge</a> patikrinkite, ar Jūsų siūlomo užsakyti leidinio nėra bibliotekoje.
+       </div>
        <div class="col s12 m12 l12">
        <div class="box-center">
          <form class="" action="index.php" method="post">
@@ -188,26 +210,51 @@
              </div>
            </div>
 
-           <div class="footer">
-             <div class="row">
-               <div class="col s12 m12 l12">
-                 <div class="footer">
+         <div class="footer">
+           <div class="row">
+             <div class="col s12 m12 l12">
+               <div class="footer">
 
-                     <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
-                     <p>Muzikos fakulteto skaitykla:
-                     Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
-                     <p>Muzikos fakulteto biblioteka:
-                     Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
-                     <p>Teatro ir kino fakulteto biblioteka
-                     T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
-                     <p>El. paštas: biblioteka@lmta.lt</p>
-                  </div>
-              </div>
+                   <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
+                   <p>Muzikos fakulteto skaitykla:
+                   Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
+                   <p>Muzikos fakulteto biblioteka:
+                   Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
+                   <p>Teatro ir kino fakulteto biblioteka
+                   T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
+                   <p>El. paštas: biblioteka@lmta.lt</p>
+                </div>
             </div>
+          </div>
 
-        <script type="text/javascript" src="js/materialize.min.js"></script>
-        <script type="text/javascript">
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.sidenav').sidenav();
+    });
 
-        </script>
-      </body>
-    </html>
+      $(document).ready(function(){
+        $('.sidenav').sidenav();
+    });
+
+      $(document).ready(function() {
+        var stickyNavTop = $('.nav-color').offset().top;
+        var stickyNav = function(){
+            var scrollTop = $(window).scrollTop();
+        if (scrollTop > stickyNavTop) {
+            $('.nav-color').addClass('sticky');
+            }
+        else {
+            $('.nav-color').removeClass('sticky');
+            }
+        };
+
+        stickyNav();
+        $(window).scroll(function() {
+            stickyNav();
+        });
+      });
+
+    </script>
+  </body>
+</html>
