--- a/projektas/paslaugos.html
+++ b/projektas/paslaugos.html
@@ -39,12 +39,12 @@
           display: flex;
       }
 
-      .fb{
+      /* .fb{
         width: 40px;
         margin-left: 400px;
         margin-top:20px;
 
-      }
+      } */
       .nav-color{
           background-color:#eeeeee ;
       }
@@ -89,7 +89,16 @@
               color: #a63b32 ;
             }
 
-            .bibl{
+            .sticky{
+              position: fixed;
+              width: 100%;
+              left: 0;
+              top: 0;
+              z-index: 100;
+              border-top: 0;
+            }
+
+            .juodas{
               color:black;
             }
 
@@ -97,20 +106,20 @@
 
      <!--Let browser know website is optimized for mobile-->
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   </head>
+</head>
 
-   <body background="images/3.jpg">
+  <body background="images/3.jpg">
 
 
                              <!-- VIRSUS LOGO-->
      <header class="virsus">
        <div class="logo">
-        <a href="https://lmta.lt" target="_blank"><img class="logo"src="images/lmta.png" alt=""></a>
-          <div class="biblioteka">
-             <a class="bibl"href="index.html" target="_blank"><h3>BIBLIOTEKA</h3></a>
-             <div class="fb">
+         <img class="logo"src="images/lmta.png" alt="">
+           <div class="biblioteka">
+               <a class="juodas"href="index.html"><h3>BIBLIOTEKA</h3></a>
+             <!-- <div class="fb">
                <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
-             </div>
+             </div> -->
            </div>
          </div>
        </header>
@@ -141,9 +150,9 @@
        </ul>
 
 
-          <!--DESTYMAS-->
+                          <!--DESTYMAS-->
           <div class="row">
-          <!--KAIRE PUS2E -->
+                          <!--KAIRE PUS2E -->
 
             <div class="col s12 m12 l12">
               <ul class="collapsible">
@@ -216,8 +225,6 @@
               </div>
               </div>
 
-
-
               <div class="dokumentai">
               <table class="striped">
                 <h5 class="pavadinimas">PAGALBA BIBLIOTEKOS SKAITYTOJUI</h5>
@@ -268,18 +275,40 @@
              </div>
            </div>
 
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript">
+
+          $(document).ready(function(){
+            $('.collapsible').collapsible();
+            });
 
 
+          $(document).ready(function(){
+            $('.sidenav').sidenav();
+            });
 
+          $(document).ready(function(){
+            $('.sidenav').sidenav();
+        });
 
+          $(document).ready(function() {
+            var stickyNavTop = $('.nav-color').offset().top;
+            var stickyNav = function(){
+              var scrollTop = $(window).scrollTop();
+              if (scrollTop > stickyNavTop) {
+                $('.nav-color').addClass('sticky');
+            }
+              else {
+                $('.nav-color').removeClass('sticky');
+            }
+          };
 
-          <script type="text/javascript" src="js/materialize.min.js"></script>
-          <script type="text/javascript">
+            stickyNav();
 
-
-              $(document).ready(function(){
-                $('.collapsible').collapsible();
-              });
+            $(window).scroll(function() {
+              stickyNav();
+        });
+      });
 
 
       </script>
