--- a/projektas/Apie.html
+++ b/projektas/Apie.html
@@ -31,11 +31,10 @@
           height: 70px;
         }
 
-      /* .fb{
+      .fb{
           width: 40px;
-          margin-left: 400px;
-          margin-top:20px;
-        } */
+          margin-top:50px;
+        }
 
       .biblioteka {
           margin-left: 50px;
@@ -66,15 +65,16 @@
       }
 
       .footer{
-          background-color:#333331 ;
-          margin: 0 auto;
-          color: white;
-          text-align: center;
-        }
+            background-color:#e0e0e0;
+            margin: 0 auto;
+            color: black;
+            text-align: center;
+            font-size: 12px;
+          }
 
 
       #toggle {
-          background-color: #333331;
+          background-color: #a63b32;
           width: 350px;
           height: 45px;
           color: white;
@@ -83,6 +83,7 @@
           margin-left: auto;
           margin-right: auto;
           width: 100%;
+          border: none;
       }
 
       #text {
@@ -97,6 +98,41 @@
           top: 0;
           z-index: 100;
           border-top: 0;
+        }
+
+        ul.breadcrumb1 {
+            padding: 10px 16px;
+            list-style: none;
+            background-color: #eee;
+        }
+
+
+        ul.breadcrumb1 li {
+            display: inline;
+            font-size: 14px;
+        }
+
+
+        ul.breadcrumb1 li+li:before {
+            padding: 8px;
+            color: black;
+            content: "/";
+        }
+
+
+        .breadcrumb1 a {
+            color: black;
+            text-decoration: none;
+        }
+
+
+        .breadcrumb1 a:hover {
+            color: #a63b32;
+        }
+
+        .bible {
+          padding-top: 50px;
+          font-weight: bold;
         }
 
     </style>
@@ -144,6 +180,12 @@
         <li><a href="pasiulyk.html">PASIŪLYK LEIDINĮ</a></li>
      </ul>
 
+     <ul class="breadcrumb1">
+          <li><a href="index.html">Pagrindinis</a></li>
+          <li><a href="apie.html">Apie biblioteką</a></li>
+      </ul>
+
+
 
 
 
@@ -178,30 +220,33 @@
               <p>– Biblioteka dalyvauja projektuose, programose, įvairių organizacijų veikloje.</p></span>
 
             <div class="btn-container">
-            <button id="toggle">Skaityti daugiau</button>
+            <button id="toggle">SKAITYTI DAUIGAU</button>
             </div>
           </div>
         </div>
       </div>
 
 
-       <div class="footer">
-         <div class="row">
-           <div class="col s12 m12 l12">
-             <div class="footer">
-                 <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
-                 <p>Muzikos fakulteto skaitykla:
-                 Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
-                 <p>Muzikos fakulteto biblioteka:
-                 Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
-                 <p>Teatro ir kino fakulteto biblioteka
-                 T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
-                 <p>El. paštas: biblioteka@lmta.lt</p>
-              </div>
+      <div class="footer">
+        <div class="row">
+          <div class="col s12 m12 l3">
+          <p class="bible">Lietuvos muzikos ir teatro akademijos biblioteka</p>
           </div>
-        </div>
-      </div>
-
+          <div class="col s12 m12 l6">
+          <p>Muzikos fakulteto skaitykla:
+          Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
+          <p>Muzikos fakulteto biblioteka:
+          Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
+          <p>Teatro ir kino fakulteto biblioteka
+          T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
+          <p>El. paštas: biblioteka@lmta.lt</p>
+          </div>
+          <div class="col s12 m12 l3">
+          <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
+         </div>
+       </div>
+    </div>
+  </div>
 
 
 
@@ -215,15 +260,15 @@
 
            $("#toggle").click(function() {
              var elem = $("#toggle").text();
-             if (elem == "Skaityti daugiau") {
+             if (elem == "SKAITYTI DAUGIAU") {
 
-               $("#toggle").text("Skaityti mažiau");
+               $("#toggle").text("SKAITYTI MAŽIAU");
                $("#text").slideDown();
             }
 
             else {
 
-               $("#toggle").text("Skaityti daugiau");
+               $("#toggle").text("SKAITYTI DAUGIAU");
                $("#text").slideUp();
            }
          });
