--- a/projektas/index.html
+++ b/projektas/index.html
@@ -40,11 +40,11 @@
           margin-top: -5px;
       }
 
-      /* .fb{
-        width: 40px;
-        margin-left: 400px;
-        margin-top:20px;
-      } */
+      .fb{
+          width: 40px;
+          margin-top:50px;
+        }
+
 
       .nav-color{
           background-color:#eeeeee ;
@@ -98,11 +98,12 @@
 
 
         .footer{
-            background-color:#333331 ;
-            margin: 0 auto;
-            color: white;
-            text-align: center;
-          }
+              background-color:#e0e0e0;
+              margin: 0 auto;
+              color: black;
+              text-align: center;
+              font-size: 12px;
+            }
 
 
         .naujileidiniai {
@@ -155,6 +156,11 @@
           top: 0;
           z-index: 100;
           border-top: 0;
+        }
+
+        .bible {
+          padding-top: 50px;
+          font-weight: bold;
         }
     </style>
 
@@ -265,22 +271,28 @@
            </div>
         </div>
 
-                                        <!--footeris-->
 
-          <div class="footer">
-            <div class="row">
-              <div class="col s12 m12 l12">
-                <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
-                <p>Muzikos fakulteto skaitykla:
-                Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
-                <p>Muzikos fakulteto biblioteka:
-                Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
-                <p>Teatro ir kino fakulteto biblioteka
-                T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
-                <p>El. paštas: biblioteka@lmta.lt</p>
-             </div>
+
+      <div class="footer">
+        <div class="row">
+          <div class="col s12 m12 l3">
+          <p class="bible">Lietuvos muzikos ir teatro akademijos biblioteka</p>
+          </div>
+          <div class="col s12 m12 l6">
+          <p>Muzikos fakulteto skaitykla:
+          Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
+          <p>Muzikos fakulteto biblioteka:
+          Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
+          <p>Teatro ir kino fakulteto biblioteka
+          T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
+          <p>El. paštas: biblioteka@lmta.lt</p>
+          </div>
+          <div class="col s12 m12 l3">
+          <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
          </div>
        </div>
+    </div>
+  </div>
 
 
 
