--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -31,11 +31,10 @@
           height: 70px;
         }
 
-      /* .fb{
+      .fb{
           width: 40px;
-          margin-left: 400px;
-          margin-top:20px;
-        } */
+          margin-top:50px;
+        }
 
       .biblioteka {
           margin-left: 50px;
@@ -53,7 +52,7 @@
           display: block;
           margin-left: auto;
           margin-right: auto;
-          width: 60%;
+          width: 30%;
           margin-top:20px;
       }
 
@@ -63,19 +62,20 @@
         }
 
 
-      .footer{
-          background-color:#333331 ;
+        .footer{
+          background-color:#e0e0e0;
           margin: 0 auto;
-          color: white;
+          color: black;
           text-align: center;
-        }
+          font-size: 12px;
+            }
 
 
       .btn{
           width: 200px;
           height: 50px;
           padding: 8px;
-          background-color: #a63b32 !Important;
+          background-color:  #a63b32;
           display: block;
           margin-left: auto;
           margin-right: auto;
@@ -102,7 +102,42 @@
         .juoda{
             color:black;
         }
-        
+
+        ul.breadcrumb1 {
+            padding: 10px 16px;
+            list-style: none;
+            background-color: #eee;
+        }
+
+
+        ul.breadcrumb1 li {
+            display: inline;
+            font-size: 14px;
+        }
+
+
+        ul.breadcrumb1 li+li:before {
+            padding: 8px;
+            color: black;
+            content: "/";
+        }
+
+
+        .breadcrumb1 a {
+            color: black;
+            text-decoration: none;
+        }
+
+
+        .breadcrumb1 a:hover {
+            color: #a63b32;
+        }
+
+        .bible {
+          padding-top: 50px;
+          font-weight: bold;
+        }
+
 
     </style>
 
@@ -148,6 +183,12 @@
           <li><a href="apie.html">APIE BIBLIOTEKĄ</a></li>
           <li><a href="pasiulyk.html">PASIŪLYK LEIDINĮ</a></li>
        </ul>
+
+       <ul class="breadcrumb1">
+          <li><a href="index.html">Pagrindinis</a></li>
+          <li><a href="pasiulyk.html">Pasiūlyk leidinį</a></li>
+      </ul>
+
                           <!--FORMA  -->
        <h5 class="pavadinimas">LEIDINIŲ UŽSAKYMO FORMA</h5>
        <div class="box-center">
@@ -210,22 +251,26 @@
              </div>
            </div>
 
-         <div class="footer">
-           <div class="row">
-             <div class="col s12 m12 l12">
-               <div class="footer">
-
-                   <h6>Lietuvos muzikos ir teatro akademijos biblioteka</h6>
-                   <p>Muzikos fakulteto skaitykla:
-                   Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
-                   <p>Muzikos fakulteto biblioteka:
-                   Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
-                   <p>Teatro ir kino fakulteto biblioteka
-                   T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
-                   <p>El. paštas: biblioteka@lmta.lt</p>
-                </div>
+           <div class="footer">
+             <div class="row">
+               <div class="col s12 m12 l3">
+               <p class="bible">Lietuvos muzikos ir teatro akademijos biblioteka</p>
+               </div>
+               <div class="col s12 m12 l6">
+               <p>Muzikos fakulteto skaitykla:
+               Gedimino pr. 42, Vilnius, tel.: (8-5) 262 8447 </p>
+               <p>Muzikos fakulteto biblioteka:
+               Vilniaus g. 6-2,Vilnius, tel.:(8-5) 262 2330</p>
+               <p>Teatro ir kino fakulteto biblioteka
+               T. Kosciuškos g. 10,Vilnius,tel.:(8-5) 261 3841 </p>
+               <p>El. paštas: biblioteka@lmta.lt</p>
+               </div>
+               <div class="col s12 m12 l3">
+               <a href="https://facebook.com/lmtabiblioteka" target="_blank"><img class="fb"src="images/dds.png" alt=""></a>
+              </div>
             </div>
-          </div>
+         </div>
+       </div>
 
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript">
