--- a/projektas/Apie.html
+++ b/projektas/Apie.html
@@ -220,7 +220,7 @@
               <p>– Biblioteka dalyvauja projektuose, programose, įvairių organizacijų veikloje.</p></span>
 
             <div class="btn-container">
-            <button id="toggle">SKAITYTI DAUIGAU</button>
+            <button id="toggle">SKAITYTI DAUGIAU</button>
             </div>
           </div>
         </div>
