--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -217,7 +217,7 @@
                        <td><input type="text" name="metai" value=""></td>
                      </tr>
                      <tr>
-                       <td>5. Egzemplorių skaičius:</td>
+                       <td>5. Egzempliorių skaičius:</td>
                        <td><input type="text" name="skaičius" value=""></td>
                      </tr>
                    </table>
