--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -81,6 +81,10 @@
           margin-right: auto;
           margin-top:30px;
       }
+     
+      .btn:hover {
+           background-color: #cc493d !Important;
+         }
 
         .info1{
             width:200px;
