--- a/projektas/pasiulyk.html
+++ b/projektas/pasiulyk.html
@@ -141,6 +141,15 @@
           padding-top: 50px;
           font-weight: bold;
         }
+     
+       .input-field input[type=text] {
+          color: #a63b32 !important;
+        }
+
+        .input-field input[type=text]:focus {
+           border-bottom: 1px solid #a63b32 !important;
+           box-shadow: 0 1px 0 0 #a63b32 !important;
+         }
 
 
     </style>
@@ -198,7 +207,7 @@
        <div class="box-center">
          LMTA bendruomenės nariai gali pasiūlyti bibliotekai įsigyti mokslui ir studijoms reikalingus leidinius. Prieš pildydami užsakymo formą, LMTA bibliotekos  <a href="https://aleph.library.lt/F?func=find-b-0&local_base=lmt01opac" target="_blank">el. kataloge</a> patikrinkite, ar Jūsų siūlomo užsakyti leidinio nėra bibliotekoje.
        </div>
-       <div class="col s12 m12 l12">
+       <div class="input-field col s12 m12 l12">
        <div class="box-center">
          <form class="" action="index.php" method="post">
                <fieldset>
